syntax = "proto3";

package mycompany.mystack;

service MyStackServer {
    rpc Echo(EchoRequest) returns (EchoResponse);
    rpc Fail(FailRequest) returns (FailResponse);
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

message FailRequest {
    string message = 1;
}

message FailResponse {
    string message = 1;
}
